Decided main palette & design

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -31,7 +31,7 @@
   "jungle-part-time": "(Part-Time)",
   "jungle": "Entertainment Hobby Shop JUNGLE",
   "jungle-location": "Osaka, Japan",
-  "jungle-content": "<li>Packing products for customer of online order.</li>",
+  "jungle-content": "<li>Packed products for customer of online order.</li>",
 
   "navy-job": "Seaman Apprentice",
   "navy": "Lang Yang FFG-935, Taiwan Navy",
