--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -8,7 +8,7 @@
   "iii": "財団法人情報産業学院",
   "iii-course": "ウェブデベロッパー養成コース",
   "iii-location": "台湾，台北",
-  "iii-content": "<li>ウェブ開発の基礎</li><li>HTML、CSS、JavaScriptからして、JSフレームワークのNode.js、React.jsなども勉強しました</li>",
+  "iii-content": "<li>ウェブ開発の基礎</li><li>HTML、CSS、JavaScriptから学んで、JSフレームワークのNode.js、React.jsなども勉強しました</li>",
 
   "jasso": "大阪日本語教育センター",
   "jasso-course": "日本語学科",
