Add project area new design

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -50,6 +50,8 @@
   "software": "Software",
 
   "languages": "LANGUAGES",
+  
+  "cert-header": "Certification",
 
   "mandarin": "Mandarin",
   "mandarin-level": "Native",
