Fixed i18n JSON bug

--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -54,7 +54,7 @@
   "cert-header": "検定",
 
   "mandarin": "中国語",
-  "mamdarin-level": "母語",
+  "mandarin-level": "母語",
   
   "english": "英語",
   "english-level": "中級者",
