--- a/i18n/zh-tw.json
+++ b/i18n/zh-tw.json
@@ -54,7 +54,7 @@
   "cert-header": "語言檢定測驗",
 
   "mandarin": "中文",
-  "mamdarin-level": "母語",
+  "mandarin-level": "母語",
   "english": "英語",
   "english-level": "中等",
   "english-cert": "TOEIC",
