Fixed some wrong words

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -42,7 +42,7 @@
   "prj-title1": "My Resume",
   "prj-comment1": "Made with CSS Grid, jQuery i18n",
   "prj-title2": "The Wheel",
-  "prj-comment2": "Team Project of From Front-End Course, made with React.js, Node.js, mySQL",
+  "prj-comment2": "Team Project of Front-End Course, made with React.js, Node.js, mySQL",
 
   "title-technical-skills": "TECHNICAL<br>SKILLS",
 
