--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -18,7 +18,7 @@
   "ncku": "国立成功大学",
   "ncku-major": "船舶工学部",
   "ncku-location": "台湾，台南",
-  "ncku-content": "<li>FORTRANとC言語を勉強しました/li><li>VBAで船体のスピートを分析しました</li><li>船の設計を習いました</li>",
+  "ncku-content": "<li>FORTRANとC言語を勉強しました</li><li>VBAで船体のスピートを分析しました</li><li>船の設計を習いました</li>",
 
   "title-work-experience": "職務経歴",
 
