Update resume content

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -24,6 +24,11 @@
 
   "title-work-experience": "WORK<br>EXPERIENCE",
 
+  "cloud-job": "Front-End Engineer",
+  "cloud": "Cloud Interactive",
+  "cloud-location": "Taipei, Taiwan",
+  "cloud-content": "<li>Web developing</li>",
+
   "soic-job": "Naval Engineer",
   "soic": "Ship and Ocean Industries R&D Center (SOIC)",
   "soic-location": "Taipei, Taiwan",
