--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -24,6 +24,11 @@
 
   "title-work-experience": "職務経歴",
 
+  "cloud-job": "フロントエンドエンジニア",
+  "cloud": "クラウドインタラクティブ",
+  "cloud-location": "台湾，台北",
+  "cloud-content": "<li>ウェッブ開発</li>",
+
   "soic-job": "エンジニア",
   "soic": "財団法人船舶と海洋産業研究センター",
   "soic-location": "台湾，台北",
