--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -15,12 +15,12 @@
   "jasso": "大阪日本語教育センター",
   "jasso-course": "日本語学科",
   "jasso-location": "日本，大阪",
-  "jasso-content": "<li>関西の大都市ー大阪で世界中の留学生と一緒に日本語を勉強しました</li><li>日本文化と地元生活の体験</li><li>地元の人によく交流して、日本語を身につけて、日本語能力試験N1を取った</li><li>日本橋にあるホビーショップでバイトしました</li>",
+  "jasso-content": "<li>関西の大都市ー大阪で世界中の留学生と一緒に日本語を勉強しました</li><li>日本文化と地元生活の体験</li><li>地元の人とよく交流し、日本語能力を向上させ、日本語能力試N1を取得しました。</li><li>日本橋にあるホビーショップでアルバイトしました</li>",
 
   "ncku": "国立成功大学",
   "ncku-major": "船舶工学部",
   "ncku-location": "台湾，台南",
-  "ncku-content": "<li>FORTRANとC言語を勉強しました</li><li>VBAで船体のスピートを分析しました</li><li>船の設計を習いました</li>",
+  "ncku-content": "<li>FORTRANとC言語を勉強しました</li><li>VBAで船体のスピードを分析しました</li><li>船の設計を習いました</li>",
 
   "title-work-experience": "職務経歴",
 
